--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(MultivariateLinearRegression)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
-    twoVariableLinearRegression.cpp)
+    twoVariableLinearRegression.cpp tess.h)
 
 add_executable(MultivariateLinearRegression ${SOURCE_FILES})
